Refactoring maven directory structure
- Add www.hackerranking.com project

--- a/www.hackerrank.com/pom.xml
+++ b/www.hackerrank.com/pom.xml
@@ -1,13 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.geunho</groupId>
-    <artifactId>algorithm</artifactId>
+    <artifactId>www.hackerrank.com</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Algorithm</name>
-    <description>Algorithm solution for Java</description>
+    <name>www.hackerrank.com</name>
+    <description>HackerRank algorithm solution for Java</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
